[package]
name = "familyline-server-test"
version = "0.1.0"
authors = ["Arthur Mendes <arthur@versatushpc.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
regex = "1"
chrono = "0.4.11"

serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"