[package]
name = "familyline-server-test"
version = "0.1.0"
authors = ["Arthur Mendes <arthurmco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
regex = "1"
chrono = "0.4.11"

serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
rand = "0.7"

pnet = "0.25.0"

vecfold = "0.1.6"
